--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Sorry</h1>
-<p>Under Construction. See you in Aug 2021. </p>
+<p>Under Construction. See you in Aug 2021. Please contact troy@curvibit.com for any inquiries. </p>
   <br>
   <p>-<b>Troy</b></p>
 
