--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 </head>
 <body>
 
-<h1>Sorry</h1>
-<p>Under Construction. See you in Aug 2021. Please contact troy@curvibit.com for any inquiries. </p>
-  <br>
-  <p>-<b>Troy</b></p>
+<h1>This page is currently unavailable.</h1>
+<p>Please contact troy@curvibit.com for any inquiries. </p>
 
 </body>
 </html>
