--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>CurviBit</title>
+<link rel="shortcut icon" type="image/x-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/icon.png">
 </head>
 <body>
 
