--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>This page is currently unavailable.</h1>
-<p>Please contact troy@curvibit.com for any inquiries. </p>
+<p>Please contact troy@curvibit.com for any inquiries. test</p>
 
 </body>
 </html>
