--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
 <title>CurviBit</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
 <h1>This page is currently unavailable.</h1>
-<p>Please contact troy@curvibit.com for any inquiries. test</p>
+<p>Please contact troy@curvibit.com for any inquiries. test1</p>
 
 </body>
 </html>
