--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <head>
 <title>CurviBit</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" type="image/x-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-192x192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/browserconfig.xml">
+<link rel="manifest" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-16x16.png">
+<link rel="mask-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-32x32.png">
+<link rel="mask-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 </head>
