--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 <html>
 <head>
 <title>CurviBit</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-192x192.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-512x512.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/browserconfig.xml">
-<link rel="manifest" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-16x16.png">
-<link rel="mask-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-32x32.png">
-<link rel="mask-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<link rel="shortcut icon" type="image/png" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-512x512.png">
 </head>
 <body>
 
