--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>CurviBit</title>
-<link rel="shortcut icon" type="image/png" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/android-chrome-512x512.png">
+<link rel="icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico">
 </head>
 <body>
 
