--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>CurviBit</title>
-<link rel="icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico">
+<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 
