--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>CurviBit</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon.ico?v=2">
 <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/curvibit/curvibit.github.io/blob/assets/favicon_package_v0.16/favicon-16x16.png">
