--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <h1>This page is currently unavailable.</h1>
-<p>Please contact troy@curvibit.com for any inquiries. test1</p>
+<p>Please contact troy@curvibit.com for any inquiries. </p>
 
 </body>
 </html>
