--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html>
 <head>
 <title>CurviBit</title>
+<link rel="shortcut icon" href="assets/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 <link rel="manifest" href="assets/site.webmanifest">
 <meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="assets/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 </head>
 <body>
