--- a/index.html
+++ b/index.html
@@ -1,22 +1,455 @@
-  
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>CurviBit</title>
-<link rel="shortcut icon" href="assets/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-<link rel="manifest" href="assets/site.webmanifest">
-<link rel="mask-icon" href="assets/safari-pinned-tab.svg"
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="assets/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+  <!-- Theme Made By www.w3schools.com -->
+  <title>CB Demo</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+  body {
+    font: 400 15px Lato, sans-serif;
+    line-height: 1.8;
+    color: #818181;
+  }
+  t {
+    text-align:center; 
+    vertical-align: middle;
+    display: table-cell;   
+  }
+  h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+  }
+  h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+  }  
+  .adjust-line-height {
+    line-height: 75%;
+  }
+  .adjust-line-height-main {
+    line-height: 150%
+  }
+  .jumbotron {
+    background-color: #1ebbf4;
+    color: #fff;
+    padding: 100px 25px;
+    font-family: Montserrat, sans-serif;
+  }
+  .container-fluid {
+    padding: 60px 50px;
+  }
+  .bg-grey {
+    background-color: #f6f6f6;
+  }
+  .logo-small {
+    color: #1ebbf4;
+    font-size: 50px;
+  }
+  .logo {
+    color: #1ebbf4;
+    font-size: 200px;
+  }
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail img {
+    width: 50%;
+    height: 50%;
+    margin-bottom: 10px;
+  }
+  .circular--square {
+    border-radius: 50%;
+  }
+  .carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #1ebbf4;
+  }
+  .carousel-indicators li {
+    border-color: #1ebbf4;
+  }
+  .carousel-indicators li.active {
+    background-color: #1ebbf4;
+  }
+  .item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+  }
+  .item span {
+    font-style: normal;
+  }
+  .panel {
+    border: 1px solid #1ebbf4; 
+    border-radius:0 !important;
+    transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+    border: 1px solid #1ebbf4;
+    background-color: #fff !important;
+    color: #1ebbf4;
+  }
+  .panel-heading {
+    color: #fff !important;
+    background-color: #1ebbf4 !important;
+    padding: 25px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+    background-color: white !important;
+  }
+  .panel-footer h3 {
+    font-size: 32px;
+  }
+  .panel-footer h4 {
+    color: #aaa;
+    font-size: 14px;
+  }
+  .panel-footer .btn {
+    margin: 15px 0;
+    background-color: #1ebbf4;
+    color: #fff;
+  }
+  .navbar {
+    margin-bottom: 0;
+    background-color: #1ebbf4;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+    font-family: Montserrat, sans-serif;
+  }
+  .mod {
+    background-color: #fff;
+  }
+  .navbar li a, .navbar .navbar-brand {
+    color: #fff !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #1ebbf4 !important;
+    background-color: #fff !important;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+  }
+  footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #1ebbf4;
+  }
+  .slideanim {visibility:hidden;}
+  .slide {
+    animation-name: slide;
+    -webkit-animation-name: slide;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    visibility: visible;
+  }
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+    .col-sm-5 {
+      margin: 0px 0;
+    }
+    .btn-lg {
+      width: 100%;
+      margin-bottom: 35px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .logo {
+      font-size: 150px;
+    }
+  }
+  </style>
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<h1>This page is currently unavailable.</h1>
-<p>Please contact troy@curvibit.com for any inquiries. </p>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <div class="adjust-line-height">
+        <br>
+      </div>
+      <a class="navbar" href="#myPage"><img src="images/curvibitlogo.png" alt="Paris" width="144" height="30"></a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#product">PRODUCT</a></li>
+        <!-- <li><a href="#pricing">PRICING</a></li> -->
+        <li><a href="#team">TEAM</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron text-center adjust-line-height-main">
+  <img src="images/curvibitlogo.png" alt="Paris" width="240" height="50">
+  <p><br>Data Engineering</p> 
+</div>
+
+<!-- Container (About Section) -->
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>CurviBit Inc.<h2><br>
+      <h4>A B2B and B2C Technology company. <br>
+        <br> We provide data services. We optimize client management, acquisiton, and relations for our customers.</p>
+      <br>
+      <ul class="navbar mod nav">
+      <button class="btn btn-default btn-lg">
+        <a style="text-decoration: none;" href="#contact">Get in Touch</a>
+      </button>
+      </ul>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-cog logo"></span>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-grey">
+  <div class="row">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-user logo slideanim"></span>
+    </div>
+    <div class="col-sm-8">
+      <h2>Our Values</h2><br>
+      <h4><strong>MISSION:</strong> Our mission is to empower people to discover and engage with the world at any moment.</h4><br>
+      <p><strong>VISION:</strong> We aim to help customers grow their business and attract new clients. </p>
+    </div>
+  </div>
+</div>
+
+
+<!-- Container (Product Section) -->
+<div id="product" class="container-fluid text-center">
+  <h2>PRODUCT</h2><br>
+  <h4>Coming soon to University of Illinois</h4>
+  <div class="row text-center slideanim">
+    <div class="col-sm middle">
+      <div class="thumbnail">
+        <img src="images/curvi_demo.jpeg">
+        <p><strong>Demo</strong></p>
+        <p>MVP in development</p>
+      </div>
+    </div>
+  </div><br>
+  
+  <h2>Proverbs</h2>
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <h4>"Innovation isn't just about creating new technology. <br>It's about using technology to solve problems in ways we've never imagined."<br><span></span></h4>
+      </div>
+      <div class="item">
+        <h4>"Connecting minds, forging futures: <br> together, we shape tomorrow's world."<br><span></span></h4>
+      </div>
+      <div class="item">
+        <h4>"Building connections is not just our business, it's our passion. <br> In the realm of digital, we humanize the space."<br><span></span></h4>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<!-- Container (Team Section) -->
+<div id="team" class="container-fluid text-center bg-grey">
+  <h2>MEET THE TEAM</h2>
+  <h4>Members</h4>
+  <div class="row slideanim text-center">
+    <div class="col-sm middle">
+      <span class="glyphicon"></span>
+      <img class="circular--square" src="images/troy.jpg" alt="Avatar" width="100" height="100">
+      <h4>Troy Lemuel Magpantay</h4>
+      <p style="margin-top: -3%;">Founder, Chief Engineer</p><br>
+    </div>
+    <div class="col-sm middle">
+      <span class="glyphicon"></span>
+      <img class="circular--square" src="images/orson.jpg" alt="Avatar" width="100" height="100">
+      <h4>Orson Wang</h4>
+      <p style="margin-top: -3%;">Co-founder, Vice President Operations</p><br>
+    </div>
+    <div class="col-sm middle">
+      <span class="glyphicon"></span>
+      <img class="circular--square" src="images/dan.png" alt="Avatar" width="100" height="100">
+      <h4>Daniel Loza</h4>
+      <p style="margin-top: -3%;">Full Stack Software Engineer</p><br>
+    </div>
+    <div class="col-sm middle">
+      <span class="glyphicon"></span>
+      <img class="circular--square" src="images/salvador.png" alt="Avatar" width="100" height="100">
+      <h4>Salvador Rodriguez</h4>
+      <p style="margin-top: -3%;">Full Stack Software Engineer</p>
+    </div>
+  </div>
+</div>
+
+<!-- Container (Contact Section) -->
+<div id="contact" class="container-fluid">
+  <!-- <form onsubmit="sendEmail(); reset(); return false;">   -->
+    <h2 class="text-center">CONTACT</h2>
+    <!-- <div class="row text-center">
+      <div class="col-sm-5"> -->
+        <p style="text-align: center;">Contact us and we'll get back to you within 24 hours.</p>
+        <p style="text-align: center;"><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
+        <!-- <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p> -->
+        <p style="text-align: center;"><span class="glyphicon glyphicon-envelope"></span> info@curvibit.com</p>
+      <!-- </div> -->
+      <!-- <div class="col-sm-7 slideanim">
+        <div class="row">
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          </div>
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          </div>
+        </div>
+        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <button class="btn btn-default pull-right" type="submit">Send</button>
+          </div>
+        </div>
+      </div> -->
+    <!-- </div>
+  </form> -->
+<!-- </div> -->
+<!-- <script> src="https://smtpjs.com/v3/smtp.js"</script>
+<script>
+    function sendEmail(){
+        Email.send({
+            // SecureToken: "53680328-a723-4710-9c04-e71be84edb49",
+            To : 'xtroy22x@gmail.com',
+            From : document.getElementById("email").value,
+            Subject : "New contact form inquiry",
+            Body : "And this is the body"
+        }).then(
+        message => alert(message)
+        );
+    }
+</script> -->
+
+<!-- Image of location/map -->
+<!-- <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%"> -->
+
+<footer class="container-fluid text-center">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a>
+  <p>© 2021 Curvibit Inc. All rights reserved. </p>
+</footer>
+
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 900, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+  
+  $(window).scroll(function() {
+    $(".slideanim").each(function(){
+      var pos = $(this).offset().top;
+
+      var winTop = $(window).scrollTop();
+        if (pos < winTop + 600) {
+          $(this).addClass("slide");
+        }
+    });
+  });
+})
+</script>
 
 </body>
 </html>
+
+
+
