--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
         <br> We provide data services. We optimize client management, acquisiton, and relations for our customers.</p>
       <br>
       <ul class="navbar mod nav">
-      <button class="btn btn-default btn-lg">
+      <!-- <button class="btn btn-default btn-lg">
         <a style="text-decoration: none;" href="#contact">Get in Touch</a>
-      </button>
+      </button> -->
       </ul>
     </div>
     <div class="col-sm-4">
