fixing white bar

--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
       <h4>A B2B and B2C Technology company. <br>
         <br> We provide data services. We optimize client management, acquisiton, and relations for our customers.</p>
       <br>
-      <ul class="navbar mod nav">
+      <!-- <ul class="navbar mod nav"> -->
       <!-- <button class="btn btn-default btn-lg">
         <a style="text-decoration: none;" href="#contact">Get in Touch</a>
       </button> -->
-      </ul>
+      <!-- </ul> -->
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-cog logo"></span>
