--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <div class="col-sm-8">
       <h2>CurviBit Inc.<h2><br>
       <h4>A B2B and B2C Technology company. <br>
-        <br> We provide data services. We optimize client management, acquisiton, and relations for our customers.</p>
+        <br> We provide data services. We optimize client management, acquisition, and relations for our customers.</p>
       <br>
       <!-- <ul class="navbar mod nav"> -->
       <!-- <button class="btn btn-default btn-lg">
