--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="adjust-line-height">
         <br>
       </div>
-      <a class="navbar" href="#myPage"><img src="images/curvibitlogo.png" alt="Paris" width="144" height="30"></a>
+      <a class="navbar" href="#myPage"><img src="images/android-chrome-512x512.png" alt="Paris" width="30" height="30"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
