--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
       <span class="glyphicon"></span>
       <img class="circular--square" src="images/troy.jpg" alt="Avatar" width="100" height="100">
       <h4>Troy Lemuel Magpantay</h4>
-      <p style="margin-top: -3%;">Founder, Chief Engineer</p><br>
+      <p style="margin-top: -3%;">Founder & President, Head of Engineering</p><br>
     </div>
     <div class="col-sm middle">
       <span class="glyphicon"></span>
       <img class="circular--square" src="images/orson.jpg" alt="Avatar" width="100" height="100">
       <h4>Orson Wang</h4>
-      <p style="margin-top: -3%;">Co-founder, Vice President Operations</p><br>
+      <p style="margin-top: -3%;">Co-founder & Vice President Operations</p><br>
     </div>
     <div class="col-sm middle">
       <span class="glyphicon"></span>
