--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <span class="glyphicon"></span>
       <img class="circular--square" src="images/orson.jpg" alt="Avatar" width="100" height="100">
       <h4>Orson Wang</h4>
-      <p style="margin-top: -3%;">Co-founder & Vice President Operations</p><br>
+      <p style="margin-top: -3%;">Co-founder & Vice President of Operations</p><br>
     </div>
     <div class="col-sm middle">
       <span class="glyphicon"></span>
